docs/0.19/_sources/api/gammapy.maps.HpxMap.rst.txt
HpxMap
======

.. currentmodule:: gammapy.maps

.. autoclass:: HpxMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxMap.data
      ~HpxMap.geom
      ~HpxMap.is_mask
      ~HpxMap.meta
      ~HpxMap.quantity
      ~HpxMap.tag
      ~HpxMap.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxMap.apply_edisp
      ~HpxMap.coadd
      ~HpxMap.copy
      ~HpxMap.create
      ~HpxMap.crop
      ~HpxMap.cumsum
      ~HpxMap.downsample
      ~HpxMap.fill_by_coord
      ~HpxMap.fill_by_idx
      ~HpxMap.fill_by_pix
      ~HpxMap.fill_events
      ~HpxMap.from_geom
      ~HpxMap.from_hdulist
      ~HpxMap.from_stack
      ~HpxMap.get_by_coord
      ~HpxMap.get_by_idx
      ~HpxMap.get_by_pix
      ~HpxMap.get_image_by_coord
      ~HpxMap.get_image_by_idx
      ~HpxMap.get_image_by_pix
      ~HpxMap.get_spectrum
      ~HpxMap.integral
      ~HpxMap.interp_by_coord
      ~HpxMap.interp_by_pix
      ~HpxMap.interp_to_geom
      ~HpxMap.iter_by_image
      ~HpxMap.mask_nearest_position
      ~HpxMap.normalize
      ~HpxMap.pad
      ~HpxMap.plot_grid
      ~HpxMap.plot_interactive
      ~HpxMap.read
      ~HpxMap.reduce
      ~HpxMap.reduce_over_axes
      ~HpxMap.resample_axis
      ~HpxMap.set_by_coord
      ~HpxMap.set_by_idx
      ~HpxMap.set_by_pix
      ~HpxMap.slice_by_idx
      ~HpxMap.sum_over_axes
      ~HpxMap.to_cube
      ~HpxMap.to_hdu
      ~HpxMap.to_hdulist
      ~HpxMap.to_swapped
      ~HpxMap.to_unit
      ~HpxMap.to_wcs
      ~HpxMap.upsample
      ~HpxMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: is_mask
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: apply_edisp
   .. automethod:: coadd
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: cumsum
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: fill_events
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: from_stack
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: get_spectrum
   .. automethod:: integral
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: interp_to_geom
   .. automethod:: iter_by_image
   .. automethod:: mask_nearest_position
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: plot_grid
   .. automethod:: plot_interactive
   .. automethod:: read
   .. automethod:: reduce
   .. automethod:: reduce_over_axes
   .. automethod:: resample_axis
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: sum_over_axes
   .. automethod:: to_cube
   .. automethod:: to_hdu
   .. automethod:: to_hdulist
   .. automethod:: to_swapped
   .. automethod:: to_unit
   .. automethod:: to_wcs
   .. automethod:: upsample
   .. automethod:: write
